--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,28 @@
-<div class="dropdown is-hoverable">
-  <div class="dropdown-trigger">
-    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu4">
-      <span>Hover me</span>
-      <span class="icon is-small">
-        <i class="fas fa-angle-down" aria-hidden="true"></i>
-      </span>
-    </button>
-  </div>
-  <div class="dropdown-menu" id="dropdown-menu4" role="menu">
-    <div class="dropdown-content">
-      <a href="#" class="dropdown-item"> Temperature </a>
-      <a href="#" class="dropdown-item"> Length </a>
-      <a href="#" class="dropdown-item"> Area </a>
-      <a href="#" class="dropdown-item"> Volume </a>
-      <a href="#" class="dropdown-item"> Time </a>
-      <a href="#" class="dropdown-item"> Date </a>
-      <a href="#" class="dropdown-item"> Weight </a>
+<div class="app-content background" [ngStyle]="{'background-image': backgroundImage}"></div>
+<div class="app-content foreground" >
+  <div class="dropdown is-hoverable">
+    <div class="dropdown-trigger">
+      <button class="button" aria-haspopup="true" aria-controls="dropdown-menu4">
+        <span>{{currentUnit}}</span>
+        <span class="icon is-small">
+          <i class="fas fa-angle-down" aria-hidden="true"></i>
+        </span>
+      </button>
     </div>
+    <div class="dropdown-menu" id="dropdown-menu4" role="menu">
+      <div *ngFor="let unit of units" class="dropdown-content">
+        <a (click)="unitChanged(unit)" class="dropdown-item"> {{unit}} </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="converter" [ngSwitch]="currentUnit">
+    <app-temperature-converter *ngSwitchCase="'Temperature'"></app-temperature-converter>
+    <app-length-converter *ngSwitchCase="'Length'"></app-length-converter>
+    <app-area-converter *ngSwitchCase="'Area'"></app-area-converter>
+    <app-volume-converter *ngSwitchCase="'Volume'"></app-volume-converter>
+    <app-time-converter *ngSwitchCase="'Time'"></app-time-converter>
+    <app-date-converter *ngSwitchCase="'Date'"></app-date-converter>
+    <app-weight-converter *ngSwitchCase="'Weight'"></app-weight-converter>
   </div>
 </div>
